feat: Enhance unified search functionality with independent pagination for users and trips